examples/test/testpolicy9355.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9355
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key30: value14
      key33: value23
      key16: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value33
          key42: value12
          key28: value16
      podSelector:
        matchLabels:
          key48: value2
          key43: value5
          key13: value39
